yml/1.sleep.yaml
apiVersion: v1
kind: Service
metadata:
  name: sleep
  labels:
    app: sleep
    service: sleep
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: sleep

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: sleep
      containers:
      - name: sleep
        image: curlimages/curl 
        command: ["/bin/sleep", "infinity"]
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/sleep/tls
          name: secret-volume
        - name: streamsets-libs
          mountPath: /opt/streamsets-datacollector-3.16.2/streamsets-libs
      volumes:
        - name: secret-volume
          secret:
            secretName: sleep-secret
            optional: true
        - name: streamsets-libs
          persistentVolumeClaim:
            claimName: streamsets-libs-pvc
