yml/3.demo1-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo1-lb
  labels:
    app: demo1
    service: demo1
spec:
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
    name: http
  selector:
    app: demo1
  type: LoadBalancer
