yml/4.demo1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo1-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: "demo1.sumits.cloud"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo1-cs
                port:
                  number: 8080
    - host: "kafkamanager.sumits.cloud"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-manager-svc
                port:
                  number: 12004
    - host: "streamsets.sumits.cloud"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamsets1-cs
                port:
                  number: 18630
